Fix dictionary spacing

--- a/src/components/feature-box/FeatureBox.css
+++ b/src/components/feature-box/FeatureBox.css
@@ -4,9 +4,18 @@
   padding: 2.5%
 }
 
-@media (min-width: 641px){
+@media screen and (min-width: 641px){
   .feature-box__container {
     display: flex;
+  }
+
+  /* Yes the naming scheme isn't consistent. TODO: Cleanup. */
+  .feature-box__bestbet-container {
+    flex: 1 1 67%;
+  }
+
+  .feature-box__definition {
+    flex: 1 1 33%;
   }
 }
 
@@ -63,12 +72,12 @@
 
 .feature-box__definition-text {
   opacity: 1;
-  transition: all .15s;
+  transition: opacity .15s;
 }
 
 .feature-box__definition-text--hidden {
   opacity: 0;
-  visibility: hidden;
+  display: none;
 }
 
 /* This is the sprite */
